--- a/textpigeon/package.json
+++ b/textpigeon/package.json
@@ -19,6 +19,7 @@
     "stream-chat": "^8.37.0",
     "stream-chat-react": "^11.23.5",
     "universal-cookie": "^7.2.0",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
